<resources>
    <string name="app_name">天地图-廊坊</string>

    <string name="title_activity_choose_area">ChooseAreaActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="tab_around">周边</string>
    <string name="tab_route">路线</string>
    <string name="tab_more">更多</string>
    <string name="tab_navi">导航</string>
    <string name="tab_share">共享</string>
    <string name="tab_bishua">笔刷</string>
    <string name="tab_yanliao">颜料</string>
    <string name="tab_xiangpi">橡皮</string>
    <string name="tab_chexiao">撤销</string>

    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <string name="app_id">5b62c9b0</string>

    <string name="demo_title_panorama">打开全景</string>
    <string name="demo_title_coordinate">坐标转换</string>
    <string name="demo_desc_pid">通过百度全景ID(PID)获取全景</string>
    <string name="demo_desc_wgs84">通过大地坐标系(WGS84)获取全景</string>
    <string name="demo_desc_gcj02">通过国测局加密坐标(GCJ02)获取全景</string>
    <string name="demo_desc_geo">通过百度经纬度坐标(BD09LL)获取全景</string>
    <string name="demo_desc_mercator">通过百度墨卡托坐标(BD09MC)获取全景</string>
    <string name="demo_desc_uid_street">通过百度地图UID获取外景</string>
    <string name="demo_desc_uid_interior">通过百度地图UID获取内景</string>
    <string name="demo_desc_uid_street_customalbum">通过百度地图UID获取外景(自定义相册)</string>
    <string name="demo_desc_marker">添加自定义标注到全景图</string>
    <string name="demo_desc_other">其他全景参数设置</string>
    <string name="demo_desc_coordinate_converter">高德, 腾讯, 谷歌坐标转换百度坐标</string>
</resources>
