<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tablayoutheight"
    android:layout_alignParentBottom="true"
    android:background="@null"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_searchview"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:background="@mipmap/icon_zhoubian"
                style="@style/style_maptab_img" />

            <Button
                android:id="@+id/bt_around"
                style="@style/style_tab_map"
                android:text="@string/tab_around" />
        </LinearLayout>


        <TextView style="@style/style_line_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:background="@mipmap/icon_luxian"
                style="@style/style_maptab_img" />

            <Button
                android:id="@+id/bt_route"
                style="@style/style_tab_map"
                android:text="@string/tab_route" />
        </LinearLayout>

        <TextView style="@style/style_line_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:background="@mipmap/icon_daohang"
                style="@style/style_maptab_img" />

            <Button
                android:id="@+id/bt_navi"
                style="@style/style_tab_map"
                android:text="@string/tab_navi" />
        </LinearLayout>

        <TextView style="@style/style_line_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:background="@mipmap/icon_daohang"-->
                <!--style="@style/style_maptab_img" />-->

            <!--<Button-->
                <!--android:id="@+id/bt_share"-->
                <!--style="@style/style_tab_map"-->
                <!--android:text="@string/tab_share" />-->
        <!--</LinearLayout>-->
        <!--<TextView style="@style/style_line_vertical"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginBottom="5dp"/>-->


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:visibility="gone"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/img_more_tab"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_redpoint"
                android:layout_width="10dp"
                android:layout_height="10dp" />
            <ImageView
                android:id="@+id/img1_tab"
                android:background="@mipmap/icon_more"
                style="@style/style_maptab_img"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/bt_more"
                style="@style/style_tab_map"
                android:text="@string/tab_more"
                android:layout_toRightOf="@+id/img1_tab"
                />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>